# stringhelper

./: CMakeLists.txt  stringhelperConfig.cmake
docs/: Doxyfile  index.html
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fdd4a40633522875807e9cdb8f3f5371.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  menudata.js  string_8c.html  string_8h.html  string_8h_source.html  structstring__t-members.html  structstring__t.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_fdd4a40633522875807e9cdb8f3f5371.tex  files.tex  refman.tex  string_8c.tex  string_8h.tex  structstring__t.tex
include/stringhelper/: string.h
src/: string.c
test/: test.h  test_append.c  test_compare.c  test_conversion_buffers.c  test_copy.c  test_erase.c  test_find.c  test_info.c  test_insert.c  test_manip.c  test_multithread.c  test_replace.c  test_substr.c
